PNA-6: feat: basic phone number lookup
