# backend/src/main/kotlin/routes/v1/number/NumberRoutes.kt
@@ -4,6 +4,7 @@ import com.pna.backend.domain.auth.request.SearchNumberRequest
 import com.pna.backend.domain.auth.response.SearchNumberResponse
 import com.pna.backend.routes.v1.auth.AUTH_SESSION_COOKIE_NAME
 import com.pna.backend.services.AuthSessionService
+import com.pna.backend.services.PhoneLookupService
 import io.ktor.http.HttpStatusCode
 import io.ktor.server.application.call
 import io.ktor.server.request.receive
@@ -12,7 +13,7 @@ import io.ktor.server.routing.Route
 import io.ktor.server.routing.post
 import io.ktor.server.routing.route
 
-fun Route.numberRoutes(authSessionService: AuthSessionService) {
+fun Route.numberRoutes(authSessionService: AuthSessionService, lookupService: PhoneLookupService) {
     route("/api/v1/number") {
         post("/search") {
             val user = authSessionService.get(call.request.cookies[AUTH_SESSION_COOKIE_NAME])
@@ -27,10 +28,8 @@ fun Route.numberRoutes(authSessionService: AuthSessionService) {
                 return@post
             }
 
-            call.respond(
-                HttpStatusCode.OK,
-                SearchNumberResponse(message = "search was successful")
-            )
+            val response = lookupService.lookup(request.number)
+            call.respond(HttpStatusCode.OK, SearchNumberResponse(message = response))
         }
     }
 
